<?xml version="1.1" encoding="utf-8"?>
<resources>

    <string name="app_name">Capital Quiz</string>
    <string name="question_text">
        Constantinople is the largest city in Turkey.
    </string>
    <string name="A_button"> A </string>
    <string name="B_button"> B </string>
    <string name="C_button"> C </string>
    <string name="D_button"> D </string>

    <string name="question_NUM">Question: %1$d / 9</string>

    <string name="q1_button"> 1 </string>
    <string name="q2_button"> 2 </string>
    <string name="q3_button"> 3 </string>
    <string name="q4_button"> 4 </string>
    <string name="q5_button"> 5 </string>
    <string name="q6_button"> 6 </string>
    <string name="q7_button"> 7 </string>
    <string name="q8_button"> 8 </string>
    <string name="q9_button"> 9 </string>

    <string name="current_score">Score: %1$d</string>


    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="answered_boolean">You already answered this question!</string>
    <string name="About_text1">Scoring: 2 points for correct answers, 1 point for questions answered with a hint, 0 points for skipped
    and for answers with chearing, -1 point for incorrect answers.</string>









    <string name="finish_button">Finish</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="action_settings">Settings</string>
    <string name="question_1">The capital of China is: A: Beijing  B: Hong Kong  C: Singapore  D: Bankok </string>
    <string name="question_2">The capital of Spain is: A: Valencia  B: Madrid  C: Barcelona  D: Malaga </string>
    <string name="question_3">The capital of France is: A: Milan  B: Calais  C: Paris  D: Lille</string>
    <string name="question_4">The capital of Hungary is  A: Vienna  B: Bucharest  C: Prague  D: Budapest </string>
    <string name="question_5">The capital of Italy is  A: Rome  B: Venice   C: Milan  D: Naples </string>
    <string name="question_6">The capital of Poland is  A: Warsaw  B: Cicke   C: Burgur  D: Hamlr </string>
    <string name="question_7">The capital of Russia is  A: Petersburg  B: Moscow   C: Chernobil  D: Vladivostok </string>
    <string name="question_8">The capital of Sweden is  A: Uppsala  B: Gotheburg   C: Helsinki  D: Stockholm </string>
    <string name="question_9">The capital of USA is  A: New York  B: Washington DC   C: Los Angeles  D: Portland </string>




    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="name_error">Please enter a valid name!</string>

    <string name="q1">What is the capital city of Albania?</string>
    <string name="q2">What is the capital city of Andorra?</string>
    <string name="q3">What is the capital city of Armenia?</string>
    <string name="q4">What is the capital city of Austria?</string>
    <string name="q5">What is the capital city of Azerbaijan?</string>
    <string name="q6">What is the capital city of Belarus?</string>
    <string name="q7">What is the capital city of Belgium?</string>
    <string name="q8">What is the capital city of Bosnia and Herzegovina?</string>
    <string name="q9">What is the capital city of Bulgaria?</string>
    <string name="q10">What is the capital city of Croatia?</string>
    <string name="q11">What is the capital city of Cyprus?</string>
    <string name="q12">What is the capital city of Czech Republic?</string>
    <string name="q13">What is the capital city of Denmark?</string>
    <string name="q14">What is the capital city of Estonia?</string>
    <string name="q15">What is the capital city of Finland?</string>
    <string name="q16">What is the capital city of France?</string>
    <string name="q17">What is the capital city of Georgia?</string>
    <string name="q18">What is the capital city of Germany?</string>
    <string name="q19">What is the capital city of Greece?</string>
    <string name="q20">What is the capital city of Hungary?</string>
    <string name="q21">What is the capital city of Iceland?</string>
    <string name="q22">What is the capital city of Ireland?</string>
    <string name="q23">What is the capital city of Italy?</string>
    <string name="q24">What is the capital city of Kazakhstan?</string>
    <string name="q25">What is the capital city of Kosovo?</string>
    <string name="q26">What is the capital city of Latvia?</string>
    <string name="q27">What is the capital city of Liechtenstein?</string>
    <string name="q28">What is the capital city of Lithuania?</string>
    <string name="q29">What is the capital city of Luxembourg?</string>
    <string name="q30">What is the capital city of Macedonia?</string>
    <string name="q31">What is the capital city of Malta?</string>
    <string name="q32">What is the capital city of Moldova?</string>
    <string name="q33">What is the capital city of Monaco?</string>
    <string name="q34">What is the capital city of Montenegro?</string>
    <string name="q35">What is the capital city of Netherlands?</string>
    <string name="q36">What is the capital city of Norway?</string>
    <string name="q37">What is the capital city of Poland?</string>
    <string name="q38">What is the capital city of Portugal?</string>
    <string name="q39">What is the capital city of Romania?</string>
    <string name="q40">What is the capital city of Russia?</string>
    <string name="q41">What is the capital city of San Marino?</string>
    <string name="q42">What is the capital city of Serbia?</string>
    <string name="q43">What is the capital city of Slovakia?</string>
    <string name="q44">What is the capital city of Slovenia?</string>
    <string name="q45">What is the capital city of Spain?</string>
    <string name="q46">What is the capital city of Sweden?</string>
    <string name="q47">What is the capital city of Switzerland?</string>
    <string name="q48">What is the capital city of Turkey?</string>
    <string name="q49">What is the capital city of Ukraine?</string>
    <string name="q50">What is the capital city of United Kingdom?</string>


    <string name="a1">Tirana</string>
    <string name="a2">Andorra la Vella</string>
    <string name="a3">Yerevan</string>
    <string name="a4">Vienna</string>
    <string name="a5">Baku</string>
    <string name="a6">Minsk</string>
    <string name="a7">Brussels</string>
    <string name="a8">Sarajevo</string>
    <string name="a9">Sofia</string>
    <string name="a10">Zagreb</string>
    <string name="a11">Nicosia</string>
    <string name="a12">Prague</string>
    <string name="a13">Copenhagen</string>
    <string name="a14">Tallinn</string>
    <string name="a15">Helsinki</string>
    <string name="a16">Paris</string>
    <string name="a17">Tbilisi</string>
    <string name="a18">Berlin</string>
    <string name="a19">Athens</string>
    <string name="a20">Budapest</string>
    <string name="a21">Reykjavik</string>
    <string name="a22">Dublin</string>
    <string name="a23">Rome</string>
    <string name="a24">Astana</string>
    <string name="a25">Pristina</string>
    <string name="a26">Riga</string>
    <string name="a27">Vaduz</string>
    <string name="a28">Vilnius</string>
    <string name="a29">Luxembourg</string>
    <string name="a30">Skopje</string>
    <string name="a31">Valletta</string>
    <string name="a32">Chisinau</string>
    <string name="a33">Monaco</string>
    <string name="a34">Podgorica</string>
    <string name="a35">Amsterdam</string>
    <string name="a36">Oslo</string>
    <string name="a37">Warsaw</string>
    <string name="a38">Lisbon</string>
    <string name="a39">Bucharest</string>
    <string name="a40">Moscow</string>
    <string name="a41">San Marino</string>
    <string name="a42">Belgrade</string>
    <string name="a43">Bratislava</string>
    <string name="a44">Ljubljana</string>
    <string name="a45">Madrid</string>
    <string name="a46">Stockholm</string>
    <string name="a47">Bern</string>
    <string name="a48">Ankara</string>
    <string name="a49">Kyiv</string>
    <string name="a50">London</string>

</resources>
